# vanier-shrimp

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
portfolio/: portfolio-img-1.avif  portfolio-img-2.avif  portfolio-img-3.avif  portfolio.json
shrimp/: __init__.py  cli.py  schema.sql
shrimp/accounts/: __init__.py  forms.py  models.py  routes.py
shrimp/static/css/: main.css
shrimp/stories/: __init__.py  forms.py  models.py  routes.py
shrimp/templates/: base.jinja
shrimp/templates/accounts/: create.jinja  login.jinja
shrimp/templates/components/: footer.jinja  nav.jinja
shrimp/templates/stories/: create.jinja  description.jinja  index.jinja
shrimp/utils/: db.py  filters.py  forms.py
